Changed .png to .png.webp

--- a/static/html/addons.html
+++ b/static/html/addons.html
@@ -12,8 +12,8 @@
       <div id="header_content">
         <div id="header_logo">
           <a id="header_logo_a" href="/static/html/index.html">
-            <img id="logo" src="/static/resources/icons/cube_chaos_logo.png">
-            <img id="logo_text" src="/static/resources/logos/cube_chaos_fullhd.png">
+            <img id="logo" src="/static/resources/icons/cube_chaos_logo.png.webp">
+            <img id="logo_text" src="/static/resources/logos/cube_chaos_fullhd.png.webp">
           </a>
         </div>
         <div id="header_space_between">
@@ -21,18 +21,18 @@
         </div>
         <div id="header_icons">
           <a class="header_a" href="https://twitter.com/CubeChaosRP">
-            <img class="header_icon_pop" id="header_twitter_icon" src="/static/resources/icons/twitter.png">
+            <img class="header_icon_pop" id="header_twitter_icon" src="/static/resources/icons/twitter.png.webp">
           </a>
           <a href="https://github.com/CubeChaos">
-            <img class="header_icon_pop" id="header_github_icon" src="/static/resources/icons/github.png">
+            <img class="header_icon_pop" id="header_github_icon" src="/static/resources/icons/github.png.webp">
           </a>
           <a href="http://mr3dalien.net/">
-            <img class="header_icon_pop" id="header_mr3dalien_icon" src="/static/resources/icons/mr3dalien.png">
+            <img class="header_icon_pop" id="header_mr3dalien_icon" src="/static/resources/icons/mr3dalien.png.webp">
           </a>
         </div>
         <div id="banner_sticky_piston_logo">
           <a href="https://stickypiston.co/r/Mr3DAlien">
-            <img class="header_icon_pop" src="/static/resources/icons/stickypiston.png">
+            <img class="header_icon_pop" src="/static/resources/icons/stickypiston.png.webp">
           </a>
         </div>
       </div>
@@ -46,9 +46,9 @@
     <div class="header_spacer"></div>
     <div class="content">
       <div class="addons_card_container">
-          <img id="3d_blocks_card" src="/static/resources/addons/3d_blocks.png">
-          <img id="3d_crystals_card" src="/static/resources/addons/3d_crystals.png">
-          <img id="3d_ores_card" src="/static/resources/addons/3d_ores.png">
+          <img id="3d_blocks_card" src="/static/resources/addons/3d_blocks.png.webp">
+          <img id="3d_crystals_card" src="/static/resources/addons/3d_crystals.png.webp">
+          <img id="3d_ores_card" src="/static/resources/addons/3d_ores.png.webp">
       </div>
     </div>
     <div class="footer">
@@ -59,8 +59,8 @@
           <p>CubeChaos.net is the official website dedicated to Mr3DAliens CubeChaos</p>
         </div>
         <div class="footer_logo">
-          <img class="footer_cube_chaos_logo" src="/static/resources/icons/cube_chaos_logo.png">
-          <img class="footer_cube_chaos_logo_2" src="/static/resources/logos/cube_chaos_wide.png">
+          <img class="footer_cube_chaos_logo" src="/static/resources/icons/cube_chaos_logo.png.webp">
+          <img class="footer_cube_chaos_logo_2" src="/static/resources/logos/cube_chaos_wide.png.webp">
         </div>
         <div class="footer_about_right">
           <div class="footer_legal">
