--- a/static/html/index.html
+++ b/static/html/index.html
@@ -12,8 +12,8 @@
       <div id="header_content">
         <div id="header_logo">
           <a id="header_logo_a" href="/static/html/index.html">
-            <img id="logo" src="/static/resources/icons/cube_chaos_logo.png">
-            <img id="logo_text" src="/static/resources/logos/cube_chaos_fullhd.png">
+            <img id="logo" src="/static/resources/icons/cube_chaos_logo.png.webp">
+            <img id="logo_text" src="/static/resources/logos/cube_chaos_fullhd.png.webp">
           </a>
         </div>
         <div id="header_space_between">
@@ -21,18 +21,18 @@
         </div>
         <div id="header_icons">
           <a class="header_a" href="https://twitter.com/CubeChaosRP">
-            <img class="header_icon_pop" id="header_twitter_icon" src="/static/resources/icons/twitter.png">
+            <img class="header_icon_pop" id="header_twitter_icon" src="/static/resources/icons/twitter.png.webp">
           </a>
           <a href="https://github.com/CubeChaos">
-            <img class="header_icon_pop" id="header_github_icon" src="/static/resources/icons/github.png">
+            <img class="header_icon_pop" id="header_github_icon" src="/static/resources/icons/github.png.webp">
           </a>
           <a href="http://mr3dalien.net/">
-            <img class="header_icon_pop" id="header_mr3dalien_icon" src="/static/resources/icons/mr3dalien.png">
+            <img class="header_icon_pop" id="header_mr3dalien_icon" src="/static/resources/icons/mr3dalien.png.webp">
           </a>
         </div>
         <div id="banner_sticky_piston_logo">
           <a href="https://stickypiston.co/r/Mr3DAlien">
-            <img class="header_icon_pop" src="/static/resources/icons/stickypiston.png">
+            <img class="header_icon_pop" src="/static/resources/icons/stickypiston.png.webp">
           </a>
         </div>
       </div>
@@ -50,58 +50,58 @@
         <div class="banner_container_background_holder banner_container_background_holder_1"></div>
         <div class="banner_slide" id="banner_slide_0">
           <div class="banner_slide_div">
-            <img src="/static/resources/logos/cube_chaos_white_border.png">
-            <img src="/static/resources/logos/cave_update.png">
+            <img src="/static/resources/logos/cube_chaos_white_border.png.webp">
+            <img src="/static/resources/logos/cave_update.png.webp">
           </div>
-          <img src="/static/resources/banner/mobs/goat.png">
+          <img src="/static/resources/banner/mobs/goat.png.webp">
         </div>
         <div class="banner_slide" id="banner_slide_1">
           <div class="banner_slide_div" id="banner_slide_1_div">
-            <img id="banner_slide_1_java_edition" src="/static/resources/logos/java_edition.png">
+            <img id="banner_slide_1_java_edition" src="/static/resources/logos/java_edition.png.webp">
             <a class="banner_download_button" href="/static/html/java_edition.html">
-              <img  src="/static/resources/buttons/download_buttons/download.png">
+              <img  src="/static/resources/buttons/download_buttons/download.png.webp">
             </a>
           </div>
         </div>
         <div class="banner_slide" id="banner_slide_2">
           <div class="banner_slide_div" id="banner_slide_2_div">
-            <img id="banner_slide_2_bedrock_edition" src="/static/resources/logos/bedrock_edition.png">
+            <img id="banner_slide_2_bedrock_edition" src="/static/resources/logos/bedrock_edition.png.webp">
             <a class="banner_marketplace_button" href="/static/html/bedrock_edition.html">
-              <img  src="/static/resources/buttons/download_buttons/button_marketplace.png">
+              <img  src="/static/resources/buttons/download_buttons/button_marketplace.png.webp">
             </a>
           </div>
         </div>
         <div class="banner_slide" id="banner_slide_3">
           <div class="banner_slide_div" id="banner_slide_3div">
-            <img id="banner_slide_3_mr3dalien" src="/static/resources/banner/logo/mr3dalien_text_logo.png">
+            <img id="banner_slide_3_mr3dalien" src="/static/resources/banner/logo/mr3dalien_text_logo.png.webp">
             <div id="banner_slide_3_buttons">
               <a class="banner_slide_3_button" href="http://mr3dalien.net/">
-                <img src="/static/resources/banner/buttons/website.png">
+                <img src="/static/resources/banner/buttons/website.png.webp">
               </a>
               <a class="banner_slide_3_button" href="https://www.youtube.com/c/Mr3DAlien">
-                <img src="/static/resources/banner/buttons/youtube.png">
+                <img src="/static/resources/banner/buttons/youtube.png.webp">
               </a>
               <a class="banner_slide_3_button" href="https://twitch.tv/Mr3DAlien">
-                <img src="/static/resources/banner/buttons/twitch.png">
+                <img src="/static/resources/banner/buttons/twitch.png.webp">
               </a>
               <a class="banner_slide_3_button" href="https://twitter.com/Mr3DAlien">
-                <img src="/static/resources/banner/buttons/twitter.png">
+                <img src="/static/resources/banner/buttons/twitter.png.webp">
               </a>
               <a class="banner_slide_3_button" href="https://www.instagram.com/mr3dalien/">
-                <img src="/static/resources/banner/buttons/instagram.png">
+                <img src="/static/resources/banner/buttons/instagram.png.webp">
               </a>
               <a class="banner_slide_3_button" href="https://open.spotify.com/user/mr3dalien">
-                <img src="/static/resources/banner/buttons/spotify.png">
+                <img src="/static/resources/banner/buttons/spotify.png.webp">
               </a>
             </div>
           </div>
         </div>
       </div>
       <button class="banner_button banner_left_button">
-        <img src="/static/resources/banner/buttons/arrow.png" width="60px" height="60px">
+        <img src="/static/resources/banner/buttons/arrow.png.webp" width="60px" height="60px">
       </button>
       <button class="banner_button banner_right_button">
-        <img src="/static/resources/banner/buttons/arrow.png" width="60px" height="60px">
+        <img src="/static/resources/banner/buttons/arrow.png.webp" width="60px" height="60px">
       </button>
     </div>
     <div class="content">
@@ -130,8 +130,8 @@ Bringing a nice comic look with some sweet mobs and blocks that you just want to
           <p>CubeChaos.net is the official website dedicated to Mr3DAliens CubeChaos</p>
         </div>
         <div class="footer_logo">
-          <img class="footer_cube_chaos_logo" src="/static/resources/icons/cube_chaos_logo.png">
-          <img class="footer_cube_chaos_logo_2" src="/static/resources/logos/cube_chaos_wide.png">
+          <img class="footer_cube_chaos_logo" src="/static/resources/icons/cube_chaos_logo.png.webp">
+          <img class="footer_cube_chaos_logo_2" src="/static/resources/logos/cube_chaos_wide.png.webp">
         </div>
         <div class="footer_about_right">
           <div class="footer_legal">
