--- a/static/html/team.html
+++ b/static/html/team.html
@@ -12,8 +12,8 @@
       <div id="header_content">
         <div id="header_logo">
           <a id="header_logo_a" href="/static/html/index.html">
-            <img id="logo" src="/static/resources/icons/cube_chaos_logo.png">
-            <img id="logo_text" src="/static/resources/logos/cube_chaos_fullhd.png">
+            <img id="logo" src="/static/resources/icons/cube_chaos_logo.png.webp">
+            <img id="logo_text" src="/static/resources/logos/cube_chaos_fullhd.png.webp">
           </a>
         </div>
         <div id="header_space_between">
@@ -21,18 +21,18 @@
         </div>
         <div id="header_icons">
           <a class="header_a" href="https://twitter.com/CubeChaosRP">
-            <img class="header_icon_pop" id="header_twitter_icon" src="/static/resources/icons/twitter.png">
+            <img class="header_icon_pop" id="header_twitter_icon" src="/static/resources/icons/twitter.png.webp">
           </a>
           <a href="https://github.com/CubeChaos">
-            <img class="header_icon_pop" id="header_github_icon" src="/static/resources/icons/github.png">
+            <img class="header_icon_pop" id="header_github_icon" src="/static/resources/icons/github.png.webp">
           </a>
           <a href="http://mr3dalien.net/">
-            <img class="header_icon_pop" id="header_mr3dalien_icon" src="/static/resources/icons/mr3dalien.png">
+            <img class="header_icon_pop" id="header_mr3dalien_icon" src="/static/resources/icons/mr3dalien.png.webp">
           </a>
         </div>
         <div id="banner_sticky_piston_logo">
           <a href="https://stickypiston.co/r/Mr3DAlien">
-            <img class="header_icon_pop" src="/static/resources/icons/stickypiston.png">
+            <img class="header_icon_pop" src="/static/resources/icons/stickypiston.png.webp">
           </a>
         </div>
       </div>
@@ -47,7 +47,7 @@
     <div class="content">
       <div class="team_container">
         <div class="team_member_wrapper">
-          <img class="team_member_picture" src="/static/resources/team/logo/mr3dalien_background.png">
+          <img class="team_member_picture" src="/static/resources/team/logo/mr3dalien_background.png.webp">
           <div class="team_member_text">
             <p>Hello, I am Mr3DAlien, but most people just call me Alien. I am the creator of this resourcepack and managed to publish it in the "Minecraft Markerplace" in cooperation with "Pathway Studios". Since 2018 I am partner of "Stickypiston" who also host this website and all minecraft server related projects. 2017 was the year in which I published my first map "Advanced Sky" on "Minecraft Realms" and later that year my second one "Cave Game" which made my proud carrier of the "Mapmakers Cape". I also produce german lets play videos on my youtube channel and livestream on twitch.</p>
           </div>
@@ -55,7 +55,7 @@
       </div>
       <div class="team_container">
         <div class="team_member_wrapper team_member_wrapper_reverse">
-          <img class="team_member_picture" src="/static/resources/team/logo/alexander.png">
+          <img class="team_member_picture" src="/static/resources/team/logo/alexander.png.webp">
           <div class="team_member_text">
             <p>Hey, I'm Alex and I am the guy who made this website and who is also currently maintaining it! I created my first Minecraft world somewhere in 2013 and I became a PvP tryhard. Souping was my main focus at the time and after a lot of practice I became one of the best hehe. Since then I've been playing Minecraft pretty regularely. Although I have to admit that the time I spend in the blocky worlds is becoming less and less day by day. Thankfully I have fallen in love with the art of programming in school, somewhere in 2016. I have been programming on and off and I still love it. Still, I am more interested in the backend side of things. Frontend stuff like html, css, javascript and web design as a whole is not my main strength. This website was my first somewhat bigger-ish project that has something to do with webdesign and I actually learned a lot. Overall it was and still is a fun experience and I hope all of you guys out there enjoy the website and obviously also the resource pack.</p>
           </div>
@@ -71,8 +71,8 @@
           <p>CubeChaos.net is the official website dedicated to Mr3DAliens CubeChaos</p>
         </div>
         <div class="footer_logo">
-          <img class="footer_cube_chaos_logo" src="/static/resources/icons/cube_chaos_logo.png">
-          <img class="footer_cube_chaos_logo_2" src="/static/resources/logos/cube_chaos_wide.png">
+          <img class="footer_cube_chaos_logo" src="/static/resources/icons/cube_chaos_logo.png.webp">
+          <img class="footer_cube_chaos_logo_2" src="/static/resources/logos/cube_chaos_wide.png.webp">
         </div>
         <div class="footer_about_right">
           <div class="footer_legal">
