--- a/static/html/addons_html/3d_blocks.html
+++ b/static/html/addons_html/3d_blocks.html
@@ -13,8 +13,8 @@
       <div id="header_content">
         <div id="header_logo">
           <a id="header_logo_a" href="/static/html/index.html">
-            <img id="logo" src="/static/resources/icons/cube_chaos_logo.png">
-            <img id="logo_text" src="/static/resources/logos/cube_chaos_fullhd.png">
+            <img id="logo" src="/static/resources/icons/cube_chaos_logo.png.webp">
+            <img id="logo_text" src="/static/resources/logos/cube_chaos_fullhd.png.webp">
           </a>
         </div>
         <div id="header_space_between">
@@ -22,18 +22,18 @@
         </div>
         <div id="header_icons">
           <a class="header_a" href="https://twitter.com/CubeChaosRP">
-            <img class="header_icon_pop" id="header_twitter_icon" src="/static/resources/icons/twitter.png">
+            <img class="header_icon_pop" id="header_twitter_icon" src="/static/resources/icons/twitter.png.webp">
           </a>
           <a href="https://github.com/CubeChaos">
-            <img class="header_icon_pop" id="header_github_icon" src="/static/resources/icons/github.png">
+            <img class="header_icon_pop" id="header_github_icon" src="/static/resources/icons/github.png.webp">
           </a>
           <a href="http://mr3dalien.net/">
-            <img class="header_icon_pop" id="header_mr3dalien_icon" src="/static/resources/icons/mr3dalien.png">
+            <img class="header_icon_pop" id="header_mr3dalien_icon" src="/static/resources/icons/mr3dalien.png.webp">
           </a>
         </div>
         <div id="banner_sticky_piston_logo">
           <a href="https://stickypiston.co/r/Mr3DAlien">
-            <img class="header_icon_pop" src="/static/resources/icons/stickypiston.png">
+            <img class="header_icon_pop" src="/static/resources/icons/stickypiston.png.webp">
           </a>
         </div>
       </div>
@@ -46,7 +46,7 @@
     </div>
     <div class="header_spacer"></div>
       <div class="content">
-        <img class="java_logo" src="/static/resources/logos/addon.png">
+        <img class="java_logo" src="/static/resources/logos/addon.png.webp">
         <div class="screenshot_slide">
           <div id="compare">
             <img id="slider_left_img" src="/static/resources/screenshots/addons/3d_blocks_off.png.webp" alt="Before" />
@@ -59,15 +59,15 @@
         </div>
         <div class="version_selection_wrapper">
           <div class="relevant_versions">
-            <a href="#" class="version"><img src="https://static.wixstatic.com/media/44b079_db99923fc2ad46eaafea687cf163189d~mv2.png/v1/fill/w_152,h_71,al_c,q_85/Version%20Button%20%5B1_17%5D.webp"></a>
-            <a href="#" class="version"><img src="https://static.wixstatic.com/media/44b079_8990d0c894d041c1acdba74f90b3e7a8~mv2.png/v1/fill/w_152,h_71,al_c,q_85/Version%20Button%20%5B1_16%5D.webp"></a>
-            <a href="#" class="version"><img src="https://static.wixstatic.com/media/44b079_cf635856e6c241e6be58d76814f42b41~mv2.png/v1/fill/w_152,h_71,al_c,q_85/Version%20Button%20%5B1_15%5D.webp"></a>
-            <a href="#" class="version"><img src="https://static.wixstatic.com/media/44b079_1400c5c7a5954b3fb8992dfc06df7169~mv2.png/v1/fill/w_152,h_71,al_c,q_85/Version%20Button%20%5B1_14%5D.webp"></a>
-            <a href="#" class="version"><img src="https://static.wixstatic.com/media/44b079_bb1919d24ab9411fb3e0b65406a3cbc8~mv2.png/v1/fill/w_152,h_71,al_c,q_85/Version%20Button%20%5B1_13%5D.webp"></a>
-            <a href="#" class="version"><img src="https://static.wixstatic.com/media/44b079_9d6e4accc2ff47008cc5d65518306d42~mv2.png/v1/fill/w_152,h_71,al_c,q_85/Version%20Button%20%5B1_12%5D.webp"></a>
+            <a href="#" class="version"><img src="/static/resources/buttons/download_buttons/version_1.17_green.png.webp"></a>
+            <a href="#" class="version"><img src="/static/resources/buttons/download_buttons/version_1.16_green.png.webp"></a>
+            <a href="#" class="version"><img src="/static/resources/buttons/download_buttons/version_1.15_green.png.webp"></a>
+            <a href="#" class="version"><img src="/static/resources/buttons/download_buttons/version_1.14_green.png.webp"></a>
+            <a href="#" class="version"><img src="/static/resources/buttons/download_buttons/version_1.13_green.png.webp"></a>
+            <a href="#" class="version"><img src="/static/resources/buttons/download_buttons/version_1.12_green.png.webp"></a>
           </div>
           <!-- <div class="more_versions">
-            <img id="more_versions_button_addons" src="../resources/buttons/download_buttons/more_button.png">
+            <img id="more_versions_button_addons" src="../resources/buttons/download_buttons/more_button.png.webp">
           </div>-->
         </div>
     </div>
@@ -79,8 +79,8 @@
           <p>CubeChaos.net is the official website dedicated to Mr3DAliens CubeChaos</p>
         </div>
         <div class="footer_logo">
-          <img class="footer_cube_chaos_logo" src="/static/resources/icons/cube_chaos_logo.png">
-          <img class="footer_cube_chaos_logo_2" src="/static/resources/logos/cube_chaos_wide.png">
+          <img class="footer_cube_chaos_logo" src="/static/resources/icons/cube_chaos_logo.png.webp">
+          <img class="footer_cube_chaos_logo_2" src="/static/resources/logos/cube_chaos_wide.png.webp">
         </div>
         <div class="footer_about_right">
           <div class="footer_legal">
