--- a/static/html/bedrock_edition.html
+++ b/static/html/bedrock_edition.html
@@ -13,8 +13,8 @@
       <div id="header_content">
         <div id="header_logo">
           <a id="header_logo_a" href="/static/html/index.html">
-            <img id="logo" src="/static/resources/icons/cube_chaos_logo.png">
-            <img id="logo_text" src="/static/resources/logos/cube_chaos_fullhd.png">
+            <img id="logo" src="/static/resources/icons/cube_chaos_logo.png.webp">
+            <img id="logo_text" src="/static/resources/logos/cube_chaos_fullhd.png.webp">
           </a>
         </div>
         <div id="header_space_between">
@@ -22,18 +22,18 @@
         </div>
         <div id="header_icons">
           <a class="header_a" href="https://twitter.com/CubeChaosRP">
-            <img class="header_icon_pop" id="header_twitter_icon" src="/static/resources/icons/twitter.png">
+            <img class="header_icon_pop" id="header_twitter_icon" src="/static/resources/icons/twitter.png.webp">
           </a>
           <a href="https://github.com/CubeChaos">
-            <img class="header_icon_pop" id="header_github_icon" src="/static/resources/icons/github.png">
+            <img class="header_icon_pop" id="header_github_icon" src="/static/resources/icons/github.png.webp">
           </a>
           <a href="http://mr3dalien.net/">
-            <img class="header_icon_pop" id="header_mr3dalien_icon" src="/static/resources/icons/mr3dalien.png">
+            <img class="header_icon_pop" id="header_mr3dalien_icon" src="/static/resources/icons/mr3dalien.png.webp">
           </a>
         </div>
         <div id="banner_sticky_piston_logo">
           <a href="https://stickypiston.co/r/Mr3DAlien">
-            <img class="header_icon_pop" src="/static/resources/icons/stickypiston.png">
+            <img class="header_icon_pop" src="/static/resources/icons/stickypiston.png.webp">
           </a>
         </div>
       </div>
@@ -46,7 +46,7 @@
     </div>
     <div class="header_spacer"></div>
       <div class="content">
-        <img class="bedrock_logo" src="/static/resources/logos/bedrock_edition.png">
+        <img class="bedrock_logo" src="/static/resources/logos/bedrock_edition.png.webp">
         <div class="screenshot_slide">
           <div id="compare">
             <img id="slider_left_img" src="/static/resources/screenshots/bedrock_edition/forest_vanilla.png.webp" alt="Before" />
@@ -74,10 +74,10 @@
         <div class="content">
           <div class="bedrock_marketplace_wrapper">
               <a href="https://www.minecraft.net/en-us/pdp?id=17799e47-57a0-4167-84a3-d9a662b5e569">
-                  <img class="get_on_marketplace_image" src="/static/resources/buttons/download_buttons/button_marketplace.png">
+                  <img class="get_on_marketplace_image" src="/static/resources/buttons/download_buttons/button_marketplace.png.webp">
               </a>
               <a href="http://changelogs.cubechaos.net/">
-                  <img class="bedrock_changelog_button" src="/static/resources/buttons/download_buttons/changelogs.png">
+                  <img class="bedrock_changelog_button" src="/static/resources/buttons/download_buttons/changelogs.png.webp">
               </a>
           </div>
       </div>
@@ -90,8 +90,8 @@
           <p>CubeChaos.net is the official website dedicated to Mr3DAliens CubeChaos</p>
         </div>
         <div class="footer_logo">
-          <img class="footer_cube_chaos_logo" src="/static/resources/icons/cube_chaos_logo.png">
-          <img class="footer_cube_chaos_logo_2" src="/static/resources/logos/cube_chaos_wide.png">
+          <img class="footer_cube_chaos_logo" src="/static/resources/icons/cube_chaos_logo.png.webp">
+          <img class="footer_cube_chaos_logo_2" src="/static/resources/logos/cube_chaos_wide.png.webp">
         </div>
         <div class="footer_about_right">
           <div class="footer_legal">
