--- a/static/html/bugreport_resourcepack.html
+++ b/static/html/bugreport_resourcepack.html
@@ -12,8 +12,8 @@
       <div id="header_content">
         <div id="header_logo">
           <a id="header_logo_a" href="/static/html/index.html">
-            <img id="logo" src="/static/resources/icons/cube_chaos_logo.png">
-            <img id="logo_text" src="/static/resources/logos/cube_chaos_fullhd.png">
+            <img id="logo" src="/static/resources/icons/cube_chaos_logo.png.webp">
+            <img id="logo_text" src="/static/resources/logos/cube_chaos_fullhd.png.webp">
           </a>
         </div>
         <div id="header_space_between">
@@ -21,18 +21,18 @@
         </div>
         <div id="header_icons">
           <a class="header_a" href="https://twitter.com/CubeChaosRP">
-            <img class="header_icon_pop" id="header_twitter_icon" src="/static/resources/icons/twitter.png">
+            <img class="header_icon_pop" id="header_twitter_icon" src="/static/resources/icons/twitter.png.webp">
           </a>
           <a href="https://github.com/CubeChaos">
-            <img class="header_icon_pop" id="header_github_icon" src="/static/resources/icons/github.png">
+            <img class="header_icon_pop" id="header_github_icon" src="/static/resources/icons/github.png.webp">
           </a>
           <a href="http://mr3dalien.net/">
-            <img class="header_icon_pop" id="header_mr3dalien_icon" src="/static/resources/icons/mr3dalien.png">
+            <img class="header_icon_pop" id="header_mr3dalien_icon" src="/static/resources/icons/mr3dalien.png.webp">
           </a>
         </div>
         <div id="banner_sticky_piston_logo">
           <a href="https://stickypiston.co/r/Mr3DAlien">
-            <img class="header_icon_pop" src="/static/resources/icons/stickypiston.png">
+            <img class="header_icon_pop" src="/static/resources/icons/stickypiston.png.webp">
           </a>
         </div>
       </div>
@@ -47,16 +47,16 @@
     <div class="content">
       <div class="content_sections">
         <a href="https://github.com/CubeChaos/CubeChaos_Java-Edition/issues">
-          <img class="bugreports_resourcepack_image" id="bugreports_resourcepack_image_1" src="/static/resources/buttons/bugs_buttons/java_edition.png">
+          <img class="bugreports_resourcepack_image" id="bugreports_resourcepack_image_1" src="/static/resources/buttons/bugs_buttons/java_edition.png.webp">
         </a>
         <a href="https://github.com/CubeChaos/CubeChaos_Bedrock-Edition/issues">
-          <img class="bugreports_resourcepack_image" id="bugreports_resourcepack_image_2" src="/static/resources/buttons/bugs_buttons/bedrock_edition.png">
+          <img class="bugreports_resourcepack_image" id="bugreports_resourcepack_image_2" src="/static/resources/buttons/bugs_buttons/bedrock_edition.png.webp">
         </a>
         <a href="/static/html/bugreport_addon.html">
-          <img class="bugreports_resourcepack_image" id="bugreports_resourcepack_image_3" src="/static/resources/buttons/bugs_buttons/addons.png">
+          <img class="bugreports_resourcepack_image" id="bugreports_resourcepack_image_3" src="/static/resources/buttons/bugs_buttons/addons.png.webp">
         </a>
         <a href="https://github.com/CubeChaos/CubeChaos_Xmas_Edition">
-          <img class="bugreports_resourcepack_image" id="bugreports_resourcepack_image_4" src="/static/resources/buttons/bugs_buttons/x-mas_edition.png">
+          <img class="bugreports_resourcepack_image" id="bugreports_resourcepack_image_4" src="/static/resources/buttons/bugs_buttons/x-mas_edition.png.webp">
         </a>
       </div>
     </div>
@@ -68,8 +68,8 @@
           <p>CubeChaos.net is the official website dedicated to Mr3DAliens CubeChaos</p>
         </div>
         <div class="footer_logo">
-          <img class="footer_cube_chaos_logo" src="/static/resources/icons/cube_chaos_logo.png">
-          <img class="footer_cube_chaos_logo_2" src="/static/resources/logos/cube_chaos_wide.png">
+          <img class="footer_cube_chaos_logo" src="/static/resources/icons/cube_chaos_logo.png.webp">
+          <img class="footer_cube_chaos_logo_2" src="/static/resources/logos/cube_chaos_wide.png.webp">
         </div>
         <div class="footer_about_right">
           <div class="footer_legal">
