--- a/static/html/java_edition.html
+++ b/static/html/java_edition.html
@@ -13,8 +13,8 @@
       <div id="header_content">
         <div id="header_logo">
           <a id="header_logo_a" href="/static/html/index.html">
-            <img id="logo" src="/static/resources/icons/cube_chaos_logo.png">
-            <img id="logo_text" src="/static/resources/logos/cube_chaos_fullhd.png">
+            <img id="logo" src="/static/resources/icons/cube_chaos_logo.png.webp">
+            <img id="logo_text" src="/static/resources/logos/cube_chaos_fullhd.png.webp">
           </a>
         </div>
         <div id="header_space_between">
@@ -22,18 +22,18 @@
         </div>
         <div id="header_icons">
           <a class="header_a" href="https://twitter.com/CubeChaosRP">
-            <img class="header_icon_pop" id="header_twitter_icon" src="/static/resources/icons/twitter.png">
+            <img class="header_icon_pop" id="header_twitter_icon" src="/static/resources/icons/twitter.png.webp">
           </a>
           <a href="https://github.com/CubeChaos">
-            <img class="header_icon_pop" id="header_github_icon" src="/static/resources/icons/github.png">
+            <img class="header_icon_pop" id="header_github_icon" src="/static/resources/icons/github.png.webp">
           </a>
           <a href="http://mr3dalien.net/">
-            <img class="header_icon_pop" id="header_mr3dalien_icon" src="/static/resources/icons/mr3dalien.png">
+            <img class="header_icon_pop" id="header_mr3dalien_icon" src="/static/resources/icons/mr3dalien.png.webp">
           </a>
         </div>
         <div id="banner_sticky_piston_logo">
           <a href="https://stickypiston.co/r/Mr3DAlien">
-            <img class="header_icon_pop" src="/static/resources/icons/stickypiston.png">
+            <img class="header_icon_pop" src="/static/resources/icons/stickypiston.png.webp">
           </a>
         </div>
       </div>
@@ -46,7 +46,7 @@
     </div>
     <div class="header_spacer"></div>
       <div class="content">
-        <img class="java_logo" src="/static/resources/logos/java_edition.png">
+        <img class="java_logo" src="/static/resources/logos/java_edition.png.webp">
         <div class="screenshot_slide">
           <div id="compare">
             <img id="slider_left_img" src="/static/resources/screenshots/java_edition/forest_vanilla.png.webp" alt="Before" />
@@ -77,31 +77,31 @@
         </div>
         <div class="version_selection_wrapper">
           <div class="relevant_versions">
-            <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos/download/3495623" class="version"><img src="/static/resources/buttons/download_buttons/version_1.17_green.png"></a>
-            <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos/download/3360174" class="version"><img src="/static/resources/buttons/download_buttons/version_1.16_green.png"></a>
-            <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos/download/3325875" class="version"><img src="/static/resources/buttons/download_buttons/version_1.15_green.png"></a>
-            <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos/download/3325889" class="version"><img src="/static/resources/buttons/download_buttons/version_1.14_green.png"></a>
-            <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos/download/3325904" class="version"><img src="/static/resources/buttons/download_buttons/version_1.13_green.png"></a>
-            <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos/download/3325907" class="version"><img src="/static/resources/buttons/download_buttons/version_1.12_green.png"></a>
-            <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos/download/3325933" class="version additional_version"><img src="/static/resources/buttons/download_buttons/version_1.11_green.png"></a>
-            <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos/download/3325941" class="version additional_version"><img src="/static/resources/buttons/download_buttons/version_1.10_green.png"></a>
-            <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos/download/3325951" class="version additional_version"><img src="/static/resources/buttons/download_buttons/version_1.9_green.png"></a>
-            <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos/download/3333944" class="version additional_version"><img src="/static/resources/buttons/download_buttons/version_1.8_green.png"></a>
-            <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos/download/3495620" class="version additional_version"><img src="/static/resources/buttons/download_buttons/version_1.7_green.png"></a>
-            <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos/download/3495618" class="version additional_version"><img src="/static/resources/buttons/download_buttons/version_1.6_green.png"></a>
-            <a href="#" class="version additional_version"><img src="/static/resources/buttons/download_buttons/version_1.5_red.png"></a>
-            <a href="#" class="version additional_version"><img src="/static/resources/buttons/download_buttons/version_1.4_red.png"></a>
-            <a href="#" class="version additional_version"><img src="/static/resources/buttons/download_buttons/version_1.3_red.png"></a>
-            <a href="#" class="version additional_version"><img src="/static/resources/buttons/download_buttons/version_1.2_red.png"></a>
-            <a href="#" class="version additional_version"><img src="/static/resources/buttons/download_buttons/version_1.1_red.png"></a>
-            <a href="https://www.planetminecraft.com/texture-pack/cube-chaos-texture-pack/" class="version additional_version"><img src="/static/resources/buttons/download_buttons/version_1.0_green.png"></a>
+            <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos/download/3495623" class="version"><img src="/static/resources/buttons/download_buttons/version_1.17_green.png.webp"></a>
+            <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos/download/3360174" class="version"><img src="/static/resources/buttons/download_buttons/version_1.16_green.png.webp"></a>
+            <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos/download/3325875" class="version"><img src="/static/resources/buttons/download_buttons/version_1.15_green.png.webp"></a>
+            <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos/download/3325889" class="version"><img src="/static/resources/buttons/download_buttons/version_1.14_green.png.webp"></a>
+            <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos/download/3325904" class="version"><img src="/static/resources/buttons/download_buttons/version_1.13_green.png.webp"></a>
+            <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos/download/3325907" class="version"><img src="/static/resources/buttons/download_buttons/version_1.12_green.png.webp"></a>
+            <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos/download/3325933" class="version additional_version"><img src="/static/resources/buttons/download_buttons/version_1.11_green.png.webp"></a>
+            <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos/download/3325941" class="version additional_version"><img src="/static/resources/buttons/download_buttons/version_1.10_green.png.webp"></a>
+            <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos/download/3325951" class="version additional_version"><img src="/static/resources/buttons/download_buttons/version_1.9_green.png.webp"></a>
+            <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos/download/3333944" class="version additional_version"><img src="/static/resources/buttons/download_buttons/version_1.8_green.png.webp"></a>
+            <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos/download/3495620" class="version additional_version"><img src="/static/resources/buttons/download_buttons/version_1.7_green.png.webp"></a>
+            <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos/download/3495618" class="version additional_version"><img src="/static/resources/buttons/download_buttons/version_1.6_green.png.webp"></a>
+            <a href="#" class="version additional_version"><img src="/static/resources/buttons/download_buttons/version_1.5_red.png.webp"></a>
+            <a href="#" class="version additional_version"><img src="/static/resources/buttons/download_buttons/version_1.4_red.png.webp"></a>
+            <a href="#" class="version additional_version"><img src="/static/resources/buttons/download_buttons/version_1.3_red.png.webp"></a>
+            <a href="#" class="version additional_version"><img src="/static/resources/buttons/download_buttons/version_1.2_red.png.webp"></a>
+            <a href="#" class="version additional_version"><img src="/static/resources/buttons/download_buttons/version_1.1_red.png.webp"></a>
+            <a href="https://www.planetminecraft.com/texture-pack/cube-chaos-texture-pack/" class="version additional_version"><img src="/static/resources/buttons/download_buttons/version_1.0_green.png.webp"></a>
           </div>
           <div class="more_versions">
-            <img id="more_versions_button" src="/static/resources/buttons/download_buttons/more_button.png">
+            <img id="more_versions_button" src="/static/resources/buttons/download_buttons/more_button.png.webp">
           </div>
         </div>
         <a class="java_changelog_button_a" href="http://changelogs.cubechaos.net/">
-          <img class="java_changelog_button" src="/static/resources/buttons/download_buttons/changelogs.png">
+          <img class="java_changelog_button" src="/static/resources/buttons/download_buttons/changelogs.png.webp">
         </a>
       </div>
     <div class="footer">
@@ -112,8 +112,8 @@
           <p>CubeChaos.net is the official website dedicated to Mr3DAliens CubeChaos</p>
         </div>
         <div class="footer_logo">
-          <img class="footer_cube_chaos_logo" src="/static/resources/icons/cube_chaos_logo.png">
-          <img class="footer_cube_chaos_logo_2" src="/static/resources/logos/cube_chaos_wide.png">
+          <img class="footer_cube_chaos_logo" src="/static/resources/icons/cube_chaos_logo.png.webp">
+          <img class="footer_cube_chaos_logo_2" src="/static/resources/logos/cube_chaos_wide.png.webp">
         </div>
         <div class="footer_about_right">
           <div class="footer_legal">
