--- a/static/html/addons_html/3d_crystals.html
+++ b/static/html/addons_html/3d_crystals.html
@@ -59,7 +59,7 @@
         </div>
         <div class="version_selection_wrapper">
           <div class="relevant_versions">
-            <a href="#" class="version"><img src="https://static.wixstatic.com/media/44b079_db99923fc2ad46eaafea687cf163189d~mv2.png/v1/fill/w_152,h_71,al_c,q_85/Version%20Button%20%5B1_17%5D.webp"></a>
+            <a href="#" class="version"><img src="/static/resources/buttons/download_buttons/version_1.17_green.png.webp"></a>
           </div>
           <!-- <div class="more_versions">
             <img id="more_versions_button_addons" src="../resources/buttons/download_buttons/more_button.png.webp">
