Added description for the "Bugs" Page

--- a/static/html/bugreport_resourcepack.html
+++ b/static/html/bugreport_resourcepack.html
@@ -52,7 +52,7 @@
         <a href="https://github.com/CubeChaos/CubeChaos_Bedrock-Edition/issues">
           <img class="bugreports_resourcepack_image" id="bugreports_resourcepack_image_2" src="/static/resources/buttons/bugs_buttons/bedrock_edition.png.webp">
         </a>
-        <a href="/static/html/bugreport_addon.html">
+        <a href="/static/html/not_found.html">
           <img class="bugreports_resourcepack_image" id="bugreports_resourcepack_image_3" src="/static/resources/buttons/bugs_buttons/addons.png.webp">
         </a>
         <a href="https://github.com/CubeChaos/CubeChaos_Xmas_Edition">
