--- a/static/html/bugs.html
+++ b/static/html/bugs.html
@@ -46,14 +46,18 @@
     <div class="header_spacer"></div>
     <div class="content">
       <div class="transparent_text_container">
-        <div class="transparent_text">
-Bringing a nice comic look with some sweet mobs and blocks that you just want to hug, this pack takes Minecraft to a whole new level.
+        <div class="transparent_text"><h2>HOW TO REPORT A BUG</h2> <h2>Resource Pack</h2>1. Click on the Resource Pack Button
+2. Select the Resource Pack or Addon that has the bug in it
+3. Choose if you want to submit a "Feature Request" or if you want to report a "Bug"
+4. Please completely fill out the template there
+5. Click on "Submit new Issue"
+6. Have a wonderful day
 
-- 16x16 resolution
-- Comic oriented look
-- Every block is made of randomly selected cubes
-- Uses the default color palette for that familiar feeling we all know and love
-- By Mr3DAlien
+<h2>Website</h2>1. Click on the Website Button
+2. Choose if you want to submit a "Feature Request" or if you want to report a "Bug"
+3. Please completely fill out the template there
+4. Click on "Submit new Issue"
+5. Have an even better day
         </div>
         <div class="transparent_text_background">
         </div>
