--- a/static/html/index.html
+++ b/static/html/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="">
   <head>
+    <meta name="description" content="CubeChaos is a Minecraft Resourcepack!"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8">
     <meta http-equiv="expires" content="26400">
     <title>CubeChaos</title>
