Added Links to the Addons download pages

--- a/static/html/addons_html/3d_blocks.html
+++ b/static/html/addons_html/3d_blocks.html
@@ -59,12 +59,12 @@
         </div>
         <div class="version_selection_wrapper">
           <div class="relevant_versions">
-            <a href="#" class="version"><img src="/static/resources/buttons/download_buttons/version_1.17_green.png.webp"></a>
-            <a href="#" class="version"><img src="/static/resources/buttons/download_buttons/version_1.16_green.png.webp"></a>
-            <a href="#" class="version"><img src="/static/resources/buttons/download_buttons/version_1.15_green.png.webp"></a>
-            <a href="#" class="version"><img src="/static/resources/buttons/download_buttons/version_1.14_green.png.webp"></a>
-            <a href="#" class="version"><img src="/static/resources/buttons/download_buttons/version_1.13_green.png.webp"></a>
-            <a href="#" class="version"><img src="/static/resources/buttons/download_buttons/version_1.12_green.png.webp"></a>
+            <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos-3d-blocks-addon/download/3375266" class="version"><img src="/static/resources/buttons/download_buttons/version_1.17_green.png.webp"></a>
+            <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos-3d-blocks-addon/download/3375260" class="version"><img src="/static/resources/buttons/download_buttons/version_1.16_green.png.webp"></a>
+            <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos-3d-blocks-addon/download/3375210" class="version"><img src="/static/resources/buttons/download_buttons/version_1.15_green.png.webp"></a>
+            <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos-3d-blocks-addon/download/3371461" class="version"><img src="/static/resources/buttons/download_buttons/version_1.14_green.png.webp"></a>
+            <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos-3d-blocks-addon/download/3367818" class="version"><img src="/static/resources/buttons/download_buttons/version_1.13_green.png.webp"></a>
+            <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos-3d-blocks-addon/download/3367796" class="version"><img src="/static/resources/buttons/download_buttons/version_1.12_green.png.webp"></a>
           </div>
           <!-- <div class="more_versions">
             <img id="more_versions_button_addons" src="../resources/buttons/download_buttons/more_button.png.webp">
