--- a/static/html/addons_html/3d_crystals.html
+++ b/static/html/addons_html/3d_crystals.html
@@ -59,7 +59,7 @@
         </div>
         <div class="version_selection_wrapper">
           <div class="relevant_versions">
-            <a href="#" class="version"><img src="/static/resources/buttons/download_buttons/version_1.17_green.png.webp"></a>
+            <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos-3d-crystals-addon/download/3381268" class="version"><img src="/static/resources/buttons/download_buttons/version_1.17_green.png.webp"></a>
           </div>
           <!-- <div class="more_versions">
             <img id="more_versions_button_addons" src="../resources/buttons/download_buttons/more_button.png.webp">
