--- a/static/html/addons_html/3d_ores.html
+++ b/static/html/addons_html/3d_ores.html
@@ -59,12 +59,12 @@
         </div>
         <div class="version_selection_wrapper">
           <div class="relevant_versions">
-            <a href="#" class="version"><img src="/static/resources/buttons/download_buttons/version_1.17_green.png.webp"></a>
-            <a href="#" class="version"><img src="/static/resources/buttons/download_buttons/version_1.16_green.png.webp"></a>
-            <a href="#" class="version"><img src="/static/resources/buttons/download_buttons/version_1.15_green.png.webp"></a>
-            <a href="#" class="version"><img src="/static/resources/buttons/download_buttons/version_1.14_green.png.webp"></a>
-            <a href="#" class="version"><img src="/static/resources/buttons/download_buttons/version_1.13_green.png.webp"></a>
-            <a href="#" class="version"><img src="/static/resources/buttons/download_buttons/version_1.12_green.png.webp"></a>
+            <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos-3d-ores-addon/download/3375481" class="version"><img src="/static/resources/buttons/download_buttons/version_1.17_green.png.webp"></a>
+            <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos-3d-ores-addon/download/3375464" class="version"><img src="/static/resources/buttons/download_buttons/version_1.16_green.png.webp"></a>
+            <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos-3d-ores-addon/download/3375462" class="version"><img src="/static/resources/buttons/download_buttons/version_1.15_green.png.webp"></a>
+            <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos-3d-ores-addon/download/3375459" class="version"><img src="/static/resources/buttons/download_buttons/version_1.14_green.png.webp"></a>
+            <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos-3d-ores-addon/download/3367820" class="version"><img src="/static/resources/buttons/download_buttons/version_1.13_green.png.webp"></a>
+            <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos-3d-ores-addon/download/3367798" class="version"><img src="/static/resources/buttons/download_buttons/version_1.12_green.png.webp"></a>
           </div>
           <!-- <div class="more_versions">
             <img id="more_versions_button_addons" src="../resources/buttons/download_buttons/more_button.png.webp">
