--- a/static/html/index.html
+++ b/static/html/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="">
   <head>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4749822035804128"
+     crossorigin="anonymous"></script>
     <meta name="description" content="Bringing a nice comic look with some sweet mobs and blocks that you just want to hug, this pack takes Minecraft to a whole new level."/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8">
     <meta http-equiv="expires" content="26400">
